--- a/view/event.html
+++ b/view/event.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	
+
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -9,26 +9,26 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" >
 		<link href="https://getbootstrap.com/docs/4.0/examples/cover/cover.css" rel="stylesheet">
 		<link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
-		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">	
-		
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap4-toggle.js"></script>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
+		<script src="../js/jquery.min.js"></script>
+		<script src="../js/bootstrap4-toggle.js"></script>
 
 		<style>
 			body {
 				width: 300px;
-			}		
+			}
 		</style>
 
 	</head>
-	
+
 	<body class="text-center">
 
 		<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
 			<header class="masthead mb-auto">
 				<div class="inner">
 					<h3 class="masthead-brand">Which Egg Is Which</h3>
-					
+
 					<nav class="nav nav-masthead justify-content-center">
 						<a class="nav-link" href="home.html">HOME</a>
 						<a class="nav-link active" href="event.html">EVENT</a>
@@ -49,16 +49,13 @@
 
 			<footer class="mastfoot mt-auto">
 				© 2019 islu
-				<a class="btn btn-social-icon btn-github" 
-						href="https://github.com/islu/Which-Egg-Is-Which" 
+				<a class="btn btn-social-icon btn-github"
+						href="https://github.com/islu/Which-Egg-Is-Which"
 						 target="__parent" >
 					<span class="fa fa-github"></span>
 				</a>
 			</footer>
-			
+
 		</div>
 	</body>
 </html>
-
-
-
