--- a/view/home.html
+++ b/view/home.html
@@ -11,8 +11,8 @@
 		<link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap4-toggle.js"></script>
+		<script src="../js/jquery.min.js"></script>
+		<script src="../js/bootstrap4-toggle.js"></script>
 		<style>
 			body {
 				width: 300px;
